<package>
  <name>libntcan</name>
  <version>1.6.0</version>
  <description>This package wraps the libntcan to use it as a ros dependency.</description>
  <maintainer email="Florian.Weisshardt@ipa.fhg.de">Florian Weisshardt</maintainer>
  <license>proprietary</license>

  <url type="website">http://www.esd-electronics.com</url>
  <url type="bugtracker">http://care-o-bot.org/trac</url>

  <author>Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <cpp lflags="-Wl,-rpath,${prefix}/common/lib -L${prefix}/common/lib -lntcan" cflags="-I${prefix}/common/include -I${prefix}/common/include/libntcan"/>
  </export>
</package>
