<package>
  <name>libpcan</name>
  <version>1.6.0</version>
  <description>This package wraps the libpcan to use it as a ros dependency</description>
  <maintainer email="Florian.Weisshardt@ipa.fhg.de">Florian Weisshardt</maintainer>
  <license>LGPL</license>

  <url type="website">http://p103112.typo3server.info/fileadmin/media/linux/index.htm</url>
  <url type="bugtracker">http://care-o-bot.org/trac</url>

  <author>Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <cpp lflags="-Wl,-rpath,${prefix}/common/lib -L${prefix}/common/lib -lpcan" cflags="-I${prefix}/common/include -I${prefix}/common/include/libpcan"/>
  </export>
</package>
